--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,16 @@
-body {
-    background-color: #0B132C;
+* {
     margin: 0;
     padding: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
+    box-sizing: border-box;
+}
+
+html, body {
+    height: 100%;
+    overflow-x: hidden;
+}
+
+body {
+    background-color: #0B132C;
     color: #729FCF;
     font-family: sans-serif;
 }
@@ -15,23 +20,28 @@ body {
     align-items: center;
     justify-content: center;
     gap: 20px;
-    width: 90%;
-    max-width: 1200px;
+    height: 100vh;
+    padding: 0 10px;
+    box-sizing: border-box;
 }
 
 .hero img {
-    width: 45%;
+    max-width: 45%;
     height: auto;
 }
 
 .hero div {
-    width: 55%;
+    width: 50%;
 }
 
 .hero h1 {
     color: #F0F0F0;
     font-size: 5em;
     text-shadow: 4px 4px 10px rgba(0, 0, 0, 0.7);
+}
+
+.hero p {
+    margin-bottom: 20px;
 }
 
 .buttons {
@@ -47,10 +57,51 @@ body {
     padding: 10px 20px;
     cursor: pointer;
     transition: background-color 0.3s ease, color 0.3s ease;
-    white-space: nowrap; /* prevent text in buttons from wrapping */
+    white-space: nowrap;
+}
+
+.buttons button.download {
+    background-color: #729FCF;
+    color: #F0F0F0;
 }
 
 .buttons button:hover {
     background-color: #729FCF;
     color: #F0F0F0;
+}
+
+.installation-guide {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    padding: 20px;
+}
+
+.options {
+    display: flex;
+    gap: 20px;
+    width: 90%;
+    max-width: 1200px;
+    justify-content: center;
+}
+
+.option {
+    background-color: #1C2331;
+    color: #F0F0F0;
+    width: 45%;
+    padding: 20px;
+    border-radius: 5px;
+}
+
+@media screen and (max-width: 768px) {
+    .hero {
+        flex-direction: column;
+    }
+
+    .buttons {
+        flex-direction: column;
+        align-items: center;
+    }
 }
