--- a/styles.css
+++ b/styles.css
@@ -88,9 +88,9 @@ body {
 
 .options {
     display: flex;
-    gap: 20px;
+    gap: 50px;
     width: 90%;
-    max-width: 1200px;
+    max-width: 1500px;
     justify-content: center;
 }
 
@@ -133,6 +133,11 @@ body {
 .option img {
     width: 100%;
     height: auto;
+}
+
+
+.option p img {
+    margin-right: 5px;
 }
 
 #memory-settings li div {
