--- a/styles.css
+++ b/styles.css
@@ -144,6 +144,7 @@ body {
     line-height: 1.6;
     color: #F0F0F0;
     margin-bottom: 10px;
+    letter-spacing: 0.05em;
 }
 
 .option img {
@@ -204,6 +205,11 @@ section.more-info {
 .more-info {
     text-align: center;
     padding: 20px;
+}
+
+.more-info p {
+    line-height: 1.5em;
+    letter-spacing: 0.05em;
 }
 
 .more-info h2 {
