--- a/styles.css
+++ b/styles.css
@@ -230,15 +230,6 @@ section.more-info {
     width: 45%;
 }
 
-.more-info-content img {
-    max-width: 105%;
-    height: auto;
-}
-
-.more-info .img-container {
-    position: relative;
-}
-
 .more-info-content h3 {
     color: #FF7F50;
     margin-bottom: 10px;
@@ -276,4 +267,25 @@ section.more-info {
 #safety-note .section-content {
     text-align: center;
     color: #F0F0F0;
+}
+
+.image-pane {
+    position: relative;
+    overflow: hidden;
+    width: 50%; 
+    padding-top: 27.125%; /* This value gives a 16:9 aspect ratio. */
+    flex-grow: 1;
+}
+
+.image-pane img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+#gallery-image {
+    transition: opacity 1s ease-in-out;
 }
