--- a/styles.css
+++ b/styles.css
@@ -127,6 +127,10 @@ body {
     letter-spacing: 0.05em;
 }
 
+.download-option a {
+    margin-bottom: 40px;
+}
+
 .download-option button {
     border: 2px solid #729FCF;
     background-color: transparent;
@@ -135,7 +139,6 @@ body {
     cursor: pointer;
     transition: background-color 0.3s ease, color 0.3s ease;
     font-size: 20px; /* Bigger text */
-    margin-bottom: 35px;
     position: relative;
 }
 
