--- a/styles.css
+++ b/styles.css
@@ -162,11 +162,11 @@ body {
 }
 
 #full-download::after {
-    content: '~ MB';
+    content: '16.4 MB';
 }
 
 #lite-download::after {
-    content: '65.1 MB';
+    content: '10.4 MB';
 }
 
 #server-download::after {
@@ -216,13 +216,18 @@ body {
     border: 1px solid #1C2331;
     cursor: pointer;
     outline: none;
-    color: white;
+    color: #aaa;
     transition: background-color 0.3s;
     width: 50%;
+    font-size: 28px;
+    font-weight: light;
+    line-height: 1.2em;
+    font-family: inherit;
 }
 
 .toggle-button.active {
     background-color: #1C2331;
+    color: white;
 }
 
 .installation-guide {
@@ -243,12 +248,6 @@ body {
     color: #F0F0F0;
     padding: 20px;
     width: 60%;
-}
-
-.option h3 {
-    font-size: 48px;
-    margin-bottom: 40px;
-    line-height: 1.2em;
 }
 
 .option h4 {
@@ -284,6 +283,10 @@ body {
 #memory-settings li div {
     display: inline-block;
     width: 80px;
+}
+
+a {
+    font-size: 18px;
 }
 
 a:link {
@@ -354,7 +357,7 @@ section.more-info {
 .more-info-content p {
     color: #F0F0F0;
     font-size: 1em;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
 }
 
 /* Safety note section */
